--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //lib
+    implementation 'net.objecthunter:exp4j:0.4.8'
+
+    //lib - Apache Commons Math
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
 }
